grammar.js
    module: $ => choice(
      seq(
        optional($.module_header),
        optional($.prelude),
        repeat($.import),
        repeat($._command),
      ),
      // Fragment fallback: a sequence of tactics and/or expressions,
      // as seen in hover popups and docstring code blocks.
      repeat1($._fragment_element),
    ),

    _fragment_element: $ => choice(
      $._tactic,
      $._expression,
    ),

    prelude: _ => 'prelude',

    // Import: `import Lean.Data.Json`
    // Module path is parsed as identifier or projection chain
    import: $ => seq(
      optional(field('visibility', 'public')),
      optional(field('meta', 'meta')),
      'import',
      optional(field('all', 'all')),
      field('module', $._name),
    ),

    // ============================================================
    // Commands
    // ============================================================

    _command: $ => choice(
      // Decorated declarations: doc comment + attributes + modifiers + decl.
      // Wrapped in a single visible node so Helix's syntax-tree expand
      // selection (alt+o) can grow from inside the body to the full
      // declaration including its preamble.
      $.decorated_declaration,
      // Other commands (no modifiers)
      $.namespace,
      $.section,
      $.end,
      $.open,
      $.export,
      $.variable,
      $.universe,
      $.hash_command,
      $.syntax,
      $.set_option,
      $.include,
      $.omit,
    ),

    // `set_option name value` — option setter (lean4 Command.lean:218).
    // Use prec.left so the dotted-name parse is preferred over splitting
    // `name.field value` into name + projection-applied-to-value.
    _modifier: _ => choice('noncomputable', 'partial', 'protected', 'private', 'public', 'meta', 'unsafe', 'scoped', 'local'),


    // Namespace: `namespace Foo` or `namespace Foo.Bar.Baz`
    open: $ => seq(
      'open',
      optional('scoped'),
      repeat1(field('namespace', $._name)),
      optional(choice(
        seq('hiding', repeat1(field('hiding', $._name))),
        seq('(', repeat1(field('only', $._name)), ')'),
        seq('in', $._command),
      )),
    ),

    // `export Foo (bar baz)`
    export: $ => seq(
      'export',
      field('class', $.identifier),
      '(', repeat($.identifier), ')',
    ),

    universe: $ => seq(choice('universe', 'universes'), repeat1($.identifier)),

    // `include foo bar` / `omit foo bar` — section-scoped variable inclusion.
    hash_command: $ => prec.left(seq(
      /#[a-zA-Z_]\w*/,
      repeat($._expression),
    )),

    // `example : 1 + 1 = 2 := by rfl`
    example: $ => seq(
      'example',
      optional(field('binders', $.binders)),
      optional($._type_spec),
      ':=',
      field('body', $._expression),
    ),

    // ============================================================
    // Declarations
    // ============================================================

    _declaration: $ => choice(
      $.definition,
      alias($._instance_decl, $.definition),
      $.constant,
      $.opaque,
      $.axiom,
      $.structure,
      $.inductive,
      $.class_inductive,
    ),

    // Doc comment + attributes + modifiers + declaration, all wrapped in one
    // visible node so the Helix syntax-tree expand selection grows from the
    // body's expression up to the full declaration with its preamble.
    decorated_declaration: $ => seq(
      optional(field('doc', $.doc_comment)),
      optional(field('attributes', $.attributes)),
      repeat(field('modifier', $._modifier)),
      field('declaration', choice(
        $._declaration,
        $.example,
        $.notation,
        $.attribute,
        $.initialize,
      )),
    ),

    // `@[simp, inline]`, `@[extern "foo"]`, `@[command_elab assertCheckCmd]`,
    // `@[default_instance prio]`, etc. Each comma-separated entry is a name
    // followed by an optional sequence of atomic arguments (idents/strings/
    // numbers).
    //
    // `@[` is one token, not `'@', '['` — see #1.
    definition: $ => seq(
      field('kind', choice('def', 'theorem', 'lemma', 'abbrev')),
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      $._declaration_body,
    ),

    // Shared body production for definition and instance — factored out
    // to let the parser reuse states across both declaration forms.
    _declaration_body: $ => choice(
      seq(':=', $._layout_start, field('body', $._expression), $._layout_end),
      seq('where', $._layout_start, repeat1(seq(field('body', $.where_decl), optional($._layout_semicolon))), $._layout_end),
      repeat1($.match_arm),
    ),

    // instance — name is optional; aliased to `definition` in the parse tree.
    // Instance binders are always bracketed (no bare identifier ambiguity with name).
    binders: $ => repeat1(choice($.identifier, $._bracketed_binder)),

    // Quantifier binders: `x y : Nat` or `(x : Nat) {y : Nat}`
    // Bare identifiers can have a trailing `: Type` annotation
    _bracketed_binder: $ => choice(
      $.explicit_binder,
      $.implicit_binder,
      $.instance_binder,
    ),

    explicit_binder: $ => seq(
      '(',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      optional(seq(':=', field('default', $._expression))),
      ')',
    ),

    _type_spec: $ => seq(':', field('type', $._expression)),

    // ============================================================
    // Expressions
    // ============================================================

    _expression: $ => choice(
      $._atom,
      $.application,
      $.subscript,
      $.complement,
      $.binary_expression,
      $.unary_expression,
      $.explicit,
      // postfix ! and ? are handled by subscript modifier and notation
      $.projection,
      $.arrow,
      $.fun,
      $.quantifier,
      $.big_operator,
      $.let,
      $.have,
      $.if,
      $.if_let,
      $.match,
      $.do,
      $.by,
      $.try,
      $.return,
      $.as_pattern,
      $.show,
      $.suffices,
    ),

    // `show T from proof` / `show T by tactic` — explicit type ascription with proof.
    _atom: $ => choice(
      $.identifier,
      $.escaped_identifier,
      $.sort_star,
      $.number,
      $.float,
      $.string,
      $.interpolated_string,
      $.char,
      $.parenthesized,
      $.named_argument,
      $.tuple,
      $.anonymous_constructor,
      $.structure_instance,
      $.array,
      $.list,
      $.range,
      $.hole,
      $.synthetic_hole,
      $.quoted_name,
      $.double_quoted_name,
      $.syntax_quotation,
      $.ellipsis,
      $.sorry,
      $._boolean,
      $.cdot,
      $.subtype,
    ),

    // Function application: `f x y z`
    // Uses prec.left to parse `f x y` as `(f x) y`
    application: $ => prec.left(PREC.app, seq(
      field('name', $._expression),
      field('arguments', choice(
        $._atom,
        $.fun,
        $.if,
        $.match,
        $.do,
        $.by,
      )),
    )),

    // Array/list subscript: `arr[i]` or `arr[i]!` or `arr[i]?`
    // Also handles subarray slice: `arr[start:stop]`.
    //
    // Index/slice as separate alternatives rather than nested `optional()`s — see #1.
    subscript: $ => prec.left(PREC.proj, seq(
      field('object', $._expression),
      token.immediate('['),
      choice(
        field('index', $._expression),
        $._slice_spec,
      ),
      ']',
      optional(field('modifier', choice('!', '?'))),
    )),

    // Set complement `sᶜ` — see #9. NOTE: `f xᶜ` parses as `(f x)ᶜ`, not
    // `f (xᶜ)` (see the issue for why, and whether that's been revisited).
    complement: $ => prec.left(PREC.proj, seq(
      field('term', $._expression),
      token.immediate('ᶜ'),
    )),

    // `start:stop`, `:stop`, `start:`, `:` — the slice half of a subscript.
    _slice_spec: $ => seq(
      optional(field('index', $._expression)),
      ':',
      optional(field('stop', $._expression)),
    ),

    // Qualified name: `foo` or `Foo.Bar.baz` - used for declarations and references.
    // prec.right so the longest dotted run wins (set_option/import disambiguation).
    _name: $ => prec.right(seq(
      choice($.identifier, $.escaped_identifier),
      repeat(seq(token.immediate('.'), choice($.identifier, $.escaped_identifier))),
    )),

    // Projection: `x.foo` or `x.1` or `x.«name»` or `.field` (leading dot).
    // Splitting the leading-dot form into its own rule costs more states, not fewer — see #1.
    projection: $ => prec.left(PREC.proj, seq(
      optional(field('term', $._expression)),
      choice(
        token.immediate('.'),  // For `x.field` where x is an expression
        '.',                   // For `.field` (leading dot)
      ),
      field('name', choice($.identifier, $.escaped_identifier, $.number)),
    )),

    // Arrow type: `A → B`
    binary_expression: $ => {
      const leftAssoc = [
        [PREC.low, $._op_or],
        [PREC.and, $._op_and],
        [PREC.compare, $._op_cmp],
        [PREC.add, $._op_add],
        [PREC.mul, $._op_mul],
        [PREC.app + 1, $._op_pipe],
      ];

      // Right-associative: $, <|, ::, ^, ∘
      const rightAssoc = [
        [PREC.low, $._op_dollar],
        [PREC.add, $._op_cons],
        [PREC.mul, $._op_pow],
        [PREC.app + 1, $._op_lpipe],
      ];

      return choice(
        ...leftAssoc.map(([precedence, operator]) =>
          prec.left(precedence, seq(
            field('left', $._expression),
            field('operator', alias(operator, 'operator')),
            field('right', $._expression),
          )),
        ),
        ...rightAssoc.map(([precedence, operator]) =>
          prec.right(precedence, seq(
            field('left', $._expression),
            field('operator', alias(operator, 'operator')),
            field('right', $._expression),
          )),
        ),
      );
    },

    // Operator classes: one hidden rule per precedence level. Kept as
    // separate literals rather than one folded terminal per level (cheaper,
    // but erases individual symbols from node-types.json) — see #1.
    _op_or: _ => choice('||', '∨', '<|>', '<$>', '<*>', '*>', '<*'),
    _op_and: _ => choice('&&', '∧'),
    // Membership/subset relations — see #8.
    _op_cmp: _ => choice('==', '!=', '=', '<', '>', '<=', '>=', '≤', '≥', '≠',
                         '∣', '↔', '⊢', '∈', '∉', '⊆', '⊂', '⊇', '⊃'),
    _op_add: _ => choice('+', '-', '++', '∪', '∩', '×', '\\'),
    _op_mul: _ => choice('*', '/', '%'),
    _op_pipe: _ => choice('|>', '|>.'),
    _op_dollar: _ => '$',
    _op_cons: _ => '::',
    _op_pow: _ => choice('^', '∘'),
    _op_lpipe: _ => '<|',

    // Prefix operators (includes monadic lift ← for do-blocks).
    // Plain `prec`, not `prec.right` — see #1.
    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('!', '¬', '-', '←', '<-')),
      field('operand', $._expression),
    )),

    // Explicit: `@ident` — suppresses implicit arguments
    fun: $ => prec.right(seq(
      choice('fun', 'λ'),
      choice(
        seq(
          field('binders', repeat1(choice($._pattern, $._bracketed_binder))),
          arrow(),
          $._layout_start,
          field('body', $._expression),
          $._layout_end,
        ),
        repeat1($.match_arm),
      ),
    )),

    // Universal/existential quantifier: `∀ x, P x` or `∃ x, P x`
    have: $ => prec.right(seq(
      'have',
      optional(field('name', $.identifier)),
      optional($._type_spec),
      $._binding_body,
    )),

    // Shared `:= value ; body` tail for `let` and `have` — extracted so the
    // parser reuses states across both forms. Body is required, not
    // `optional()` — see #1.
    _binding_body: $ => prec.right(seq(
      ':=',
      field('value', $._expression),
      choice(';', $._layout_semicolon),
      field('body', $._expression),
    )),

    // ============================================================
    // Tactic mode (entered via `by`)
    // Tactics are a separate syntactic category from expressions.
    // Expressions can contain `by` blocks, but never raw tactics.
    // ============================================================

    // `by` is the only entry point from expression world into tactic world.
    calc_step: $ => prec.right(seq(
      $._expression,
      ':=',
      $._expression,
    )),

    // Goal-closing tactics get their own nodes — see #3.
    _pattern: $ => choice(
      $.identifier,
      $.hole,
      $.tuple_pattern,
      $.constructor_pattern,
      $.syntax_quotation,
      $.anonymous_constructor_pattern,
    ),

    // Tuple pattern: `(a, b)` or `(a, b, c)`
    do: $ => prec.right(seq(
      'do',
      $._layout_start,
      $._do_seq,
      optional($._layout_end),
    )),

    // Sequence of do elements separated by layout semicolons or explicit semicolons
    _do_seq: $ => prec.right(seq(
      $._do_element,
      repeat(seq(
        choice($._layout_semicolon, ';'),
        $._do_element,
      )),
    )),

    parenthesized: $ => seq(
      '(',
      optional(seq(
        $._expression,
        optional(seq(':', field('type', $._expression))),
      )),
      ')',
    ),

    // Named argument: `(name := value)`
    named_argument: $ => seq(
      '(',
      field('name', $.identifier),
      ':=',
      field('value', $._expression),
      ')',
    ),

    tuple: $ => seq('(', $._expression, ',', $._expr_list, ')'),

    // Shared comma-separated expression list for every bracketed form that
    // takes one — see #1.
    _expr_list: $ => commaSep1($._expression),

    anonymous_constructor: $ => seq('⟨', optional($._expr_list), '⟩'),

    // Subtype: `{x // P}` or `{x : T // P}`
    subtype: $ => seq(
      '{',
      field('var', $.identifier),
      optional($._type_spec),
      '//',
      field('property', $._expression),
      '}',
    ),

    array: $ => seq('#[', optional($._expr_list), ']'),

    list: $ => seq('[', optional($._expr_list), ']'),

    // Range syntax: `[:n]`, `[start:end]`, `[start:end:step]`
    range: $ => seq('[', $._range_spec, ']'),

    // Extracted range internals to separate the 3 optional expression
    // slots from the surrounding brackets.
    _range_spec: $ => seq(
      optional(field('start', $._expression)),
      ':',
      optional(field('end', $._expression)),
      optional(seq(':', field('step', $._expression))),
    ),

    // ============================================================
    // Atoms
    // ============================================================

    // Identifier with optional dot-separated parts: `Foo.Bar.baz`
    // Simple identifier without dots - projection handles qualified access
    // Continuation class includes Unicode subscripts — see #6.
    identifier: _ => /[_a-zA-Zα-ωΑ-Ωℕℤℚℝℂ∇][_a-zA-Z0-9'α-ωΑ-Ωℕℤℚℝℂ∇?!₀-₉ₐ-ₜᵢ-ᵪⱼ]*/,

    // Escaped identifier: `«name with spaces»`
    escaped_identifier: _ => /«[^»]*»/,

    // Auto-bound-universe sugar `Type*`/`Sort*` — see #7.
    float: _ => token(prec(1, seq(/\d+/, '.', optional(/\d+/)))),

    number: _ => choice(
      /\d+/,                    // decimal
      /0x[0-9a-fA-F]+/,         // hex
      /0b[01]+/,                // binary
      /0o[0-7]+/,               // octal
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    _string_content: _ => token.immediate(prec(1, /[^"\\{]+/)),

    char: _ => seq("'", choice(/[^'\\]/, /\\./), "'"),

    // Hole/placeholder: `_`
    hole: _ => '_',

    // Cdot: `·` (sugared anonymous function placeholder)
    quoted_name: $ => seq('`', $.identifier),
    syntax_quotation: $ => seq(
      '`',
      token.immediate('('),
      optional($._syntax_quotation_body),
      ')',
    ),

    // Ellipsis argument: `..`
    ellipsis: _ => '..',

    sorry: _ => 'sorry',
