test/corpus/calc_term.txt
===============
Term Calc Basic
===============

def foo (a b c : Nat) (h1 : a = b) (h2 : b = c) : a = c :=
  calc
    a = b := h1
    _ = c := h2

---

(module
  (decorated_declaration
    declaration: (definition
      name: (identifier)
      binders: (binders
        (explicit_binder
          name: (identifier)
          name: (identifier)
          name: (identifier)
          type: (identifier))
        (explicit_binder
          name: (identifier)
          type: (binary_expression
            left: (identifier)
            right: (identifier)))
        (explicit_binder
          name: (identifier)
          type: (binary_expression
            left: (identifier)
            right: (identifier))))
      type: (binary_expression
        left: (identifier)
        right: (identifier))
      body: (calc
        (calc_first_step
          (binary_expression
            left: (identifier)
            right: (identifier))
          (identifier))
        (calc_step
          (binary_expression
            left: (hole)
            right: (identifier))
          (identifier))))))

==============================
Term Calc Same-Line First Term
==============================

def foo (a b c : Nat) (h : a * b = c) : a * b = c :=
  calc a * b
    _ = c := h

---

(module
  (decorated_declaration
    declaration: (definition
      name: (identifier)
      binders: (binders
        (explicit_binder
          name: (identifier)
          name: (identifier)
          name: (identifier)
          type: (identifier))
        (explicit_binder
          name: (identifier)
          type: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier))))
      type: (binary_expression
        left: (binary_expression
          left: (identifier)
          right: (identifier))
        right: (identifier))
      body: (calc
        (calc_first_step
          (binary_expression
            left: (identifier)
            right: (identifier)))
        (calc_step
          (binary_expression
            left: (hole)
            right: (identifier))
          (identifier))))))

========================
Term Calc Inline In Have
========================

def foo (a b : Nat) (h1 : a = b) : a = b :=
  have h := calc a = b := h1
  h

---

(module
  (decorated_declaration
    declaration: (definition
      name: (identifier)
      binders: (binders
        (explicit_binder
          name: (identifier)
          name: (identifier)
          type: (identifier))
        (explicit_binder
          name: (identifier)
          type: (binary_expression
            left: (identifier)
            right: (identifier))))
      type: (binary_expression
        left: (identifier)
        right: (identifier))
      body: (have
        name: (identifier)
        value: (calc
          (calc_first_step
            (binary_expression
              left: (identifier)
              right: (identifier))
            (identifier)))
        body: (identifier)))))
