test/corpus/commands.txt
=========
#commands
=========

#check 2+2
#eval 2+2
#reduce 2+2
#print inferInstance

---

(module
  (hash_command
    (binary_expression
      (number)
      (number)))
  (hash_command
    (binary_expression
      (number)
      (number)))
  (hash_command
    (binary_expression
      (number)
      (number)))
  (hash_command
    (identifier)))

===================
Same Line #commands
===================

#eval id 2 #eval 5

---

(module
  (hash_command
    (application
      (identifier)
      (number)))
  (hash_command
    (number)))

==============
#check_failure
==============

#check_failure (inferInstance : Inhabited (Nat × _))

---

(module
  (hash_command
    (parenthesized
      (identifier)
      type: (application
        name: (identifier)
        arguments: (parenthesized
          (binary_expression
            left: (identifier)
            right: (hole)))))))

=======
Prelude
=======

prelude
import Foo

---

(module
  (prelude)
  (import
    module: (identifier)))

====
Open
====

open Foo
open Foo.Bar
open Foo Bar Baz.Quux

---

(module
  (open
    namespace: (identifier))
  (open
    namespace: (identifier)
    namespace: (identifier))
  (open
    namespace: (identifier)
    namespace: (identifier)
    namespace: (identifier)
    namespace: (identifier)))

=======
Open In
=======

open Foo in
  def baz := bar

---

(module
  (open
    namespace: (identifier)
    (decorated_declaration
      declaration: (definition
        name: (identifier)
        body: (identifier)))))

======================
Open With Missing Name
======================

open

---

(module
  (ERROR))

======
Import
======

import Foo

---

(module
  (import
    module: (identifier)))

=============
Import Nested
=============

import Foo.Bar.Baz

---

(module
  (import
    module: (identifier)
    module: (identifier)
    module: (identifier)))

========================
Import With Missing Name
========================

import

---

(module
  (ERROR))

======
Export
======

export Foo (bar baz)

---

(module
  (export
    class: (identifier)
    (identifier)
    (identifier)))

============
Empty Export
============

export Foo ()

---

(module
  (export
    (identifier)))

========================
Export With Missing Name
========================

export

---

(module
  (ERROR))

========
Universe
========

universe t
universe u2 v2 w2

---

(module
  (universe
    (identifier))
  (universe
    (identifier)
    (identifier)
    (identifier)))

==========================
Universe With Missing Name
==========================

universe

---

(module
  (ERROR))

=========
Universes
=========

universes u2 v2 w2

---

(module
  (universe
    (identifier)
    (identifier)
    (identifier)))

===============
Quoted Commands
===============

def f : Lean.Elab.Command.CommandElabM Lean.Syntax :=
`(
    namespace bar
    def bar := 12
    end bar
  )

---

(module
  (decorated_declaration
    (definition
      (identifier)
      (application
        (projection
          (projection
            (projection
              (identifier)
              (identifier))
            (identifier))
          (identifier))
        (projection
          (identifier)
          (identifier)))
      (syntax_quotation))))
